<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin">

    <ImageView
        android:id="@+id/dish_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/dish_image"
        android:scaleType="centerCrop"
        android:src="@drawable/porra" />


    <TextView
        android:id="@+id/dish_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dish_image"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        tools:text="Nombre del Plato" />


    <TextView
        android:id="@+id/dish_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dish_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        tools:text="Precio" />

    <TextView
        android:id="@+id/dish_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dish_price"
        android:layout_marginBottom="@dimen/default_margin"
        tools:text="Descripción" />

    <ImageView
        android:id="@+id/alergen_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dish_description"
        android:src="@drawable/alergen_01"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/allergen01_image"
        />

    <ImageView
        android:id="@+id/alergen_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/alergen_1"
        android:layout_toRightOf="@id/alergen_1"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_toEndOf="@id/alergen_1"
        android:layout_below="@+id/dish_description"
        android:src="@drawable/alergen_02"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/allergen02"
         />

    <ImageView
        android:id="@+id/alergen_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/alergen_2"
        android:layout_toRightOf="@id/alergen_2"
        android:layout_toEndOf="@id/alergen_2"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_below="@+id/dish_description"
        android:src="@drawable/alergen_03"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/allergen03"/>

    <ImageView
        android:id="@+id/alergen_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/alergen_3"
        android:layout_toRightOf="@id/alergen_3"
        android:layout_toEndOf="@id/alergen_3"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_below="@+id/dish_description"
        android:src="@drawable/alergen_04"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/allergen04"/>

    <ImageView
        android:id="@+id/alergen_5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/alergen_4"
        android:layout_toRightOf="@id/alergen_4"
        android:layout_toEndOf="@id/alergen_4"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_below="@+id/dish_description"
        android:src="@drawable/alergen_05"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/allergen05"/>

    <ImageView
        android:id="@+id/alergen_6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/alergen_5"
        android:layout_toRightOf="@id/alergen_5"
        android:layout_toEndOf="@id/alergen_5"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_below="@+id/dish_description"
        android:src="@drawable/alergen_06"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/allergen06"/>

</RelativeLayout>

