<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_margin="@dimen/default_margin">

    <RelativeLayout

        android:padding="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dish_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/dish_image"
            android:maxWidth="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/porra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/dish_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_toEndOf="@+id/dish_image"
            android:layout_toRightOf="@+id/dish_image"
            >

            <TextView
                android:id="@+id/dish_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20sp"
                tools:text="Nombre del Plato" />


            <TextView
                android:id="@+id/dish_price"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="Precio" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dish_orders_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toLeftOf="@id/orders_number"
            android:layout_toStartOf="@id/orders_number"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin">

            <Button
                android:id="@+id/add_dish_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/add_dish_button" />

            <Button
                android:id="@+id/remove_dish_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/remove_dish_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/orders_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible"
            tools:text="0" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
